--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<h1>HELLO WORLD!!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Sistema Cadastro</title>
+</head>
+<body>
+
+    <h1>HELLO WORLD!!!</h1> 
+       
+</body>
+
+</html>
+
+
 
